Extracting 10K original value

--- a/Process_1_GEE_Python_Classification/BackGround_modules/Class_6_Extract_Original_and_Fourier_Fitted_Image_Value_Series.ipynb
+++ b/Process_1_GEE_Python_Classification/BackGround_modules/Class_6_Extract_Original_and_Fourier_Fitted_Image_Value_Series.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,14 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "ee.Initialize()\n",
     "\n",
     "# append module folter path into sys-path so wen can import necessary modules\n",
-    "sys.path.append('./')"
+    "sys.path.append('../')"
    ]
   },
   {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,6 +107,8 @@
     "    Normalized_Index: [both for Fourier transformation and \n",
     "                       original/fitted value extraction]\n",
     "    point:            [for Fourier transformation]\n",
+    "    get_original_val: [for original/fitted value extraction] \n",
+    "                      with bool of True/False\n",
     "    \n",
     "    '''\n",
     "    \n",
@@ -107,51 +116,72 @@
     "                      end_date   = '2019-12-31',\n",
     "                      harmonics  = 3,\n",
     "                      Normalized_Index = ['NDVI', 'NDBI', 'EVI'],\n",
-    "                      point = [115.52126, 33.64591] ):\n",
+    "                      point = [115.52126, 33.64591],\n",
+    "                      get_original_val = True,\n",
+    "                      get_fitted_val = True):\n",
     "        \n",
     "        super().__init__(start_date, end_date, harmonics, Normalized_Index)\n",
     "        \n",
     "        self.point = ee.Geometry.Point(point)\n",
     "        self.advance_year_num =   int(self.end_date.format().getInfo()[:4])\\\n",
     "                                - int(self.start_date.format().getInfo()[:4]) + 1\n",
-    "\n",
+    "        self.year_range = f'{self.start_date.format().getInfo()[:4]}_{self.end_date.format().getInfo()[:4]}'\n",
+    "        \n",
+    "        self.get_original_val = get_original_val\n",
+    "        self.get_fitted_val = get_fitted_val\n",
+    "        \n",
+    "        # determine the independents\n",
+    "        self.independents_idx = [f'cos_{i}' for i in range(1,self.harmonics+1)] \\\n",
+    "                                 + [f'sin_{i}' for i in range(1,self.harmonics+1)] \\\n",
+    "                                 + ['constant','t']\n",
+    "        \n",
     "    #_______________________________Fourier_Transformation___________________________________\n",
     "    \n",
     "    def Get_Original_and_Fitting_df(self):\n",
-    "\n",
-    "        # Making the Fourier map\n",
-    "        self.Stp_1_Create_hamonic_names()\n",
-    "        self.Stp_2_Add_harmonics()\n",
-    "        self.Stp_3_Harmonic_fit()    \n",
-    "\n",
-    "        # determine the independents\n",
-    "        independents_idx = [f'cos_{i}' for i in range(1,self.harmonics+1)] \\\n",
-    "                             + [f'sin_{i}' for i in range(1,self.harmonics+1)] \\\n",
-    "                             + ['constant','t']\n",
     "        \n",
-    "        print('1/5 ==> Fourier Transformation Finished!')\n",
+    "        # if the get_original_val is False, skip Fourier transformation\n",
+    "        \n",
+    "        if self.get_original_val:\n",
+    "            # Making the Fourier map\n",
+    "            self.Stp_1_Create_hamonic_names()\n",
+    "            self.Stp_2_Add_harmonics()\n",
+    "            self.Stp_3_Harmonic_fit()\n",
+    "\n",
+    "            print('1/5 ==> Fourier Transformation Finished!')\n",
+    "            \n",
+    "        else:\n",
+    "            \n",
+    "            print('1/5 ==> Fourier Transformation skiped!')\n",
+    "\n",
     "\n",
     "    #__________________________Get the original [NDVI,NDBI,EVI] from harmonicLandsat_____________________\n",
     "        \n",
-    "        # get the necessary data\n",
-    "        original_value = self.harmonicLandsat\\\n",
-    "                             .select(self.Normalized_Index)\\\n",
-    "                             .getRegion(self.point, 30)\\\n",
-    "                             .getInfo()\n",
-    "\n",
-    "        # convert original value to dataframe\n",
-    "        original_df = pd.DataFrame(original_value[1:],columns=original_value[0])\n",
-    "        original_df['time'] = pd.to_datetime(original_df['time'],unit='ms')\n",
-    "\n",
-    "        # formating the df\n",
-    "        original_df.drop(['id','longitude','latitude'],1,inplace=True)\n",
-    "        original_df.sort_values('time',inplace=True)\n",
-    "        original_df.reset_index(inplace=True,drop=True)\n",
+    "        # if the get_original_val is False, skip Original Image Value acquiration\n",
     "        \n",
-    "        # add attribute to self\n",
-    "        self.original_df = original_df\n",
-    "        \n",
-    "        print('2/5 ==> Original Image Value df Acquired!')\n",
+    "        if self.get_original_val:\n",
+    "            # get the necessary data\n",
+    "            original_value = self.harmonicLandsat\\\n",
+    "                                 .select(self.Normalized_Index)\\\n",
+    "                                 .getRegion(self.point, 30)\\\n",
+    "                                 .getInfo()\n",
+    "\n",
+    "            # convert original value to dataframe\n",
+    "            original_df = pd.DataFrame(original_value[1:],columns=original_value[0])\n",
+    "            original_df['time'] = pd.to_datetime(original_df['time'],unit='ms')\n",
+    "\n",
+    "            # formating the df\n",
+    "            original_df.drop(['id','longitude','latitude'],1,inplace=True)\n",
+    "            original_df.sort_values('time',inplace=True)\n",
+    "            original_df.reset_index(inplace=True,drop=True)\n",
+    "\n",
+    "            # add attribute to self\n",
+    "            self.original_df = original_df\n",
+    "\n",
+    "            print('2/5 ==> Original Image Value df Acquired!')\n",
+    "            \n",
+    "        else:\n",
+    "            \n",
+    "            print('2/5 ==> Original Image Value acquiration skiped!')\n",
     "\n",
     "    #____________________________________Create indpendents_____________________________________________\n",
     "    \n",
@@ -191,50 +221,89 @@
     "\n",
     "        independents = pd.DataFrame(independents)\n",
     "        \n",
+    "        # add independents to self for check purpose\n",
+    "        self.independents = independents\n",
+    "        \n",
     "        print('3/5 ==> Independents Values Computation Completed!')\n",
     "\n",
     "    #___________________________Get the coefficients from Fourier img value________________________\n",
     "        \n",
-    "        # get the Fourier_img\n",
-    "        Fourier_img = self.harmonicTrendCoefficients\n",
-    "\n",
-    "        # get the value of Foutire img at Fig_pt, \n",
-    "        #recall that the img was multipied by 1000 and converted into an integer\n",
-    "        Fig_pt_img_value = ee.ImageCollection(Fourier_img).getRegion(self.point, 30).getInfo()\n",
-    "\n",
-    "\n",
-    "\n",
-    "        # get the coefficients and drop uesless columns\n",
-    "        coefficients = pd.DataFrame(Fig_pt_img_value[1:],columns=Fig_pt_img_value[0])\n",
-    "        coefficients.drop(['id','longitude','latitude','time'],1,inplace=True)\n",
-    "        coefficients = coefficients.T\n",
-    "\n",
-    "        # divede by 1000, because the Fourier has been multiplied by 1000 at the Fourier fitting process\n",
-    "        coefficients = coefficients/1000\n",
-    "        print('4/5 ==> Coefficients Acquiring Finished!')\n",
-    "\n",
-    "\n",
-    "    #________________________Restore the fitted value using matrix multiply___________________________\n",
+    "        # if the get_original_val is False, skip Fourier transformation\n",
+    "        if self.get_fitted_val:\n",
     "        \n",
-    "        fitted_df_list = []\n",
+    "            # if the year_range is not in the research periods, and the harmonic is not 3,\n",
+    "            # then do the calculation all again\n",
     "\n",
-    "        # loop through indexes and use matrix multiply to get the fitted values\n",
-    "        for idx in self.Normalized_Index:\n",
+    "            year_span = [f'{i}_{i+2}' for i in range(1990,2018,3)]\n",
     "\n",
-    "            X = independents[independents_idx].values\n",
-    "            y = coefficients.loc[[s for s in coefficients.index if idx in s]].values\n",
+    "            if   self.year_range in year_span[:5] and self.harmonics == 3:\n",
+    "                # import Fourier img  \n",
+    "                print('________________Using GEE assest to reduce time of Fourier transformation!__________')\n",
+    "                Fourier_img = ee.Image(f\"users/Jinzhu_Deakin/North_China_Plain/Fourier_img_harmonic_3/Fourier_img_{self.year_range}_harmonic_3\")\n",
     "\n",
-    "            fitted_df_list.append(pd.DataFrame({idx:(X@y).reshape(1,-1)[0]}))\n",
     "\n",
-    "        #_____________________________get the fitted value and add time to it_________________________________\n",
+    "            elif self.year_range in year_span[5:] and self.harmonics == 3:\n",
+    "                # import Fourier img \n",
+    "                print('________________Using GEE assest to reduce time of Fourier transformation!__________')\n",
+    "                Fourier_img = ee.Image(f\"users/wang8052664/North_China_Plain/Fourier_imgs/Fourier_img_{self.year_range}_harmonic_3\")\n",
     "\n",
-    "        fitted_df = pd.concat(fitted_df_list,1)\n",
-    "        fitted_df['time'] = pd.to_datetime(independents['time'])\n",
-    "        \n",
-    "        self.fitted_df = fitted_df\n",
-    "        \n",
-    "        print('5/5 ==> Fitted Value Computation Completed!')"
+    "\n",
+    "            else:\n",
+    "                # get the Fourier_img\n",
+    "                Fourier_img = self.harmonicTrendCoefficients\n",
+    "\n",
+    "            # get the value of Foutire img at Fig_pt, \n",
+    "            #recall that the img was multipied by 1000 and converted into an integer\n",
+    "            Fig_pt_img_value = ee.ImageCollection(Fourier_img).getRegion(self.point, 30).getInfo()\n",
+    "\n",
+    "\n",
+    "\n",
+    "            # get the coefficients and drop uesless columns\n",
+    "            coefficients = pd.DataFrame(Fig_pt_img_value[1:],columns=Fig_pt_img_value[0])\n",
+    "            coefficients.drop(['id','longitude','latitude','time'],1,inplace=True)\n",
+    "            coefficients = coefficients.T\n",
+    "\n",
+    "            # divede by 1000, because the Fourier has been multiplied by 1000 at the Fourier fitting process\n",
+    "            coefficients = coefficients/1000\n",
+    "\n",
+    "            # add coefficients to self for check purpose\n",
+    "            self.coefficients = coefficients\n",
+    "\n",
+    "            print('4/5 ==> Coefficients Acquiring Finished!')\n",
+    "\n",
+    "\n",
+    "            #________________________Restore the fitted value using matrix multiply___________________________\n",
+    "\n",
+    "            fitted_df_list = []\n",
+    "\n",
+    "            # loop through indexes and use matrix multiply to get the fitted values\n",
+    "            for idx in self.Normalized_Index:\n",
+    "\n",
+    "                X = independents[self.independents_idx].values\n",
+    "                y = coefficients.loc[[s for s in coefficients.index if idx in s]].values\n",
+    "\n",
+    "                fitted_df_list.append(pd.DataFrame({idx:(X@y).reshape(1,-1)[0]}))\n",
+    "\n",
+    "            #_____________________________get the fitted value and add time to it_________________________________\n",
+    "\n",
+    "            fitted_df = pd.concat(fitted_df_list,1)\n",
+    "            fitted_df['time'] = pd.to_datetime(independents['time'])\n",
+    "\n",
+    "            self.fitted_df = fitted_df\n",
+    "\n",
+    "            print('5/5 ==> Fitted Value Computation Completed!')\n",
+    "            \n",
+    "        else:\n",
+    "            \n",
+    "            print('5/5 ==> Fitted Value Computation Skipped!')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
