Correct the order of Sentinel 2014-2019

--- a/Process_2_Temporal_Check/Step_1_Temporal_Check.ipynb
+++ b/Process_2_Temporal_Check/Step_1_Temporal_Check.ipynb
@@ -130,23 +130,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define the threshold for sum_img of 10 classifications\n",
-    "Threshold_sum_classificatioin = 5\n",
+    "Threshold_sum_classificatioin = 4\n",
     "\n",
-    "# import the classified imgs,note here we left the last 2 classification of Classified_Landsat_1990_2019 \n",
-    "# beacuse their accuracy are too low\n",
-    "Classified_Landsat_1990_2019  = [ee.ImageCollection(f\"users/wangjinzhulala/North_China_Plain_Python/classification_img/Control_{year}\")\n",
-    "                                  .sum().gt(Threshold_sum_classificatioin).set('name',year)   for year in year_range[:-2]]\n",
-    "\n",
-    "Classified_Sentinel_2014_2019 = [ee.ImageCollection(f\"users/wangjinzhulala/North_China_Plain_Python/classification_img/Sentinel_Landsat_{year}\")\n",
-    "                                  .sum().gt(Threshold_sum_classificatioin).set('name',year)   for year in year_range[-2:]]\n",
-    "\n",
-    "# merge the classified img together\n",
-    "Classified_imgs = Classified_Landsat_1990_2019 + Classified_Sentinel_2014_2019"
+    "# import the classified imgs\n",
+    "Classified_imgs  = [ee.ImageCollection(f\"users/wangjinzhulala/North_China_Plain_Python/classification_img/Spectrum_Normalize_Fourier_Terrain_Meterology_{year}\")\n",
+    "                                  .sum().gt(Threshold_sum_classificatioin).set('name',year)   for year in year_range]\n"
    ]
   },
   {
@@ -158,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -361,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -407,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -477,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1317,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1327,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1349,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1382,16 +1375,16 @@
     "    # determine the img name\n",
     "    export_name = f'{Mode}_Window_{Window}_It_{Iteration}_{year}'\n",
     "    \n",
-    "#     task = ee.batch.Export.image.toCloudStorage(image = img,\n",
-    "#                                                 description=export_name,\n",
-    "#                                                 bucket='north_china_plain',\n",
-    "#                                                 fileNamePrefix=export_name,\n",
-    "#                                                 region=North_China_Plain.geometry().bounds(),\n",
-    "#                                                 scale=30,\n",
-    "#                                                 maxPixels=int(1e13),\n",
-    "#                                                 skipEmptyTiles=True) \n",
+    "    task = ee.batch.Export.image.toCloudStorage(image = img,\n",
+    "                                                description=export_name,\n",
+    "                                                bucket='north_china_plain',\n",
+    "                                                fileNamePrefix=export_name,\n",
+    "                                                region=North_China_Plain.geometry().bounds(),\n",
+    "                                                scale=30,\n",
+    "                                                maxPixels=int(1e13),\n",
+    "                                                skipEmptyTiles=True) \n",
     "    \n",
-    "#     task.start()\n",
+    "    task.start()\n",
     "    \n",
     "    print(f'Exporting {export_name} successful!')"
    ]
@@ -1433,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {
     "scrolled": false
    },
@@ -1441,7 +1434,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e37866a355534999aa25f7d6325c160d",
+       "model_id": "fae7e69c5ad245a59f189ee60dfa484b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1460,7 +1453,7 @@
     "# define filter parameters\n",
     "mode = 'only_forward' # 'backward_forward' |'forward_backward'|'only_forward'|'only_backward'\n",
     "window_len = 3\n",
-    "year_idx = '1996_1998'\n",
+    "year_idx = '2017_2019'\n",
     "\n",
     "\n",
     "# get the temporal checked imgs\n",
