Create Mosaic_classification in teomporal check

--- a/Process_1_GEE_Python_Classification/Sub_Process_7_Classification_on_img/Step_1_Classification_random_split_10_layers.ipynb
+++ b/Process_1_GEE_Python_Classification/Sub_Process_7_Classification_on_img/Step_1_Classification_random_split_10_layers.ipynb
@@ -307,7 +307,14 @@
    "outputs": [],
    "source": [
     "# stack all Imput_Img together\n",
-    "Stack_img = [ee.Image(img) for img in zip(Landsat_Sentinel_input,Fourier_img,NDVI_img,NDBI_img,EVI_img,Climate_mean,DEM,SLOPE)]"
+    "Stack_img = [ee.Image(img) for img in zip(Landsat_Sentinel_input,\n",
+    "                                          Fourier_img,\n",
+    "                                          NDVI_img,\n",
+    "                                          NDBI_img,\n",
+    "                                          EVI_img,\n",
+    "                                          Climate_mean,\n",
+    "                                          DEM,\n",
+    "                                          SLOPE)]"
    ]
   },
   {
